// protoc -Ipkg/grpc/ --go_out=plugins=grpc:pkg/grpc template.proto
syntax = "proto3";
package grpc;

message CreateTemplateRequest {}

message CreateTemplateResponse {}

message ReadTemplateRequest {}

message ReadTemplateResponse {}

message UpdateTemplateRequest {}

message UpdateTemplateResponse {}

message DeleteTemplateRequest {}

message DeleteTemplateResponse {}

service Template {
    rpc Create (CreateTemplateRequest) returns (CreateTemplateResponse) {}
    rpc Read (ReadTemplateRequest) returns (ReadTemplateResponse) {}
    rpc Update (UpdateTemplateRequest) returns (UpdateTemplateResponse) {}
    rpc Delete (DeleteTemplateRequest) returns (DeleteTemplateResponse) {}
}
